--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,11 +26,15 @@
   background-color: var(--color-grey-dark-1);
 
   flex: 0 0 18%; // grow shrink basis shorthand
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: #fff;
   background-color: orangered;
+  height: 88rem;
 
   flex: 1;
 }
